split panel disabling, split panel horizontal scroll fix, split panel filter area collapsing

--- a/src/portal/content/less/app/main.less
+++ b/src/portal/content/less/app/main.less
@@ -1681,18 +1681,6 @@ md-menu-content md-menu.md-menu {
   box-sizing: border-box;
 }
 
-md-input-container.md-input-focused, md-input-container.md-input-has-value {
-  label.uncut-text-on-focus-label {
-    overflow: initial;
-  }
-}
-
-md-input-container:not(.md-input-focused):not(.md-input-has-value) {
-  label.uncut-text-on-focus-label {
-    font-size: 14px;
-  }
-}
-
 .report-wizard {
   padding: 24px;
   height: 100%;
